# service-monitor

./: .gitignore  Cargo.toml  README.md  settings.ex.json
src/: main.rs
src/alert/: discord.rs  error.rs  http.rs  mod.rs  model.rs
src/check/: error.rs  http.rs  mod.rs  model.rs
src/cli/: arg.rs  input.rs  load.rs  mod.rs  service.rs
src/config/: alert.rs  check.rs  defaults.rs  mod.rs  service.rs  utils.rs
src/debugger/: log.rs  mod.rs
src/helper/: format.rs  http.rs  mod.rs
src/service/: error.rs  mod.rs  model.rs  state.rs  status.rs
