[package]
name = "service-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
chrono = "0.4.43"
clap = { version = "4.5.56", features = ["derive"] }
cron = "0.15.0"
reqwest = "0.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-cron-scheduler = { version = "0.15.1", features = ["signal"] }
